# learn-ai-by-doing

./: README.md
a2a-book-library-demo/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
a2a-book-library-demo/central_portal_agent/: __init__.py  agent.py
a2a-book-library-demo/central_portal_agent/static/: app.js  index.html  styles.css
a2a-book-library-demo/iit_bombay_library_agent/: __init__.py  agent.py  catalog.py
a2a-book-library-demo/iit_delhi_library_agent/: __init__.py  agent.py  catalog.py
a2a-book-library-demo/shared/: __init__.py  a2a_client.py  models.py
chromadb-local-rag/: .gitignore  README.md  load_food_data.py  pyproject.toml  query_foods.py  trace_workflow.py
tool-calling-deep-dive/: .env.example  01_without_tools.py  02_first_tool_call.py  03_why_structured_output.py  04_under_the_hood.py  05_multiple_tools.py  06_tool_chaining.py  README.md  config.py  docker-compose.yml  pyproject.toml  seed.py
tool-calling-deep-dive/tools/: __init__.py  catalog.py  web_search.py
